Gradle 7 - compile fails with:     Type 'com.trello.victor.RasterizeTask' property 'includeDensities' is missing an input or output annotation.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
@@ -26,7 +26,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 }
